--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="profile_status_key">ProfileRegistryStatus</string>
     <string name="profile_status_title">Status</string>
     <string name="app_title">Preço Certo Online</string>
+    <string name="app_authority">online.merkatos.prexocertoonline.fileprovider</string>
 </resources>
